syntax = "proto2";
package credential_proto;
message Credential {
    required string user_id = 1;
    required string user_token = 2;
}